--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
             </div>
         </div>
         <section class="hero">
-            <div class="hero__grid-left"><h1>From us vs. them</h1>
+            <div class="hero__grid-left">
+                <h1>From us vs. them</h1>
                 <h1>One Earth</h1>
                 <h2> Turning climate knowledge into global climate action.</h2>
                 <p>The solutions to the climate crisis already exist. The next step is coordinated action-local to global.</p>
