Modify Solution section

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </div>
         </section>
 
-        <div>
+        <div class="sectionButton">
             <a class="solution_button" href="https://www.oneearth.org/solutions/">Explore the Framework</a>
         </div>
     </div>    
@@ -246,7 +246,7 @@
             </table>
         </section>
 
-        <div>
+        <div class="sectionButton">
             <a class="solution_button" href="https://www.oneearth.org/reports-financials/">See our impact</a>
         </div>
         
@@ -300,8 +300,10 @@
             </div>
         </div>
 
-        <a class="solution_button" href="https://www.oneearth.org/partners/">Explore our Network</a>
-            
+        <div class="sectionButton">
+            <a class="solution_button" href="https://www.oneearth.org/partners/">Explore our Network</a>
+        </div>
+
     </div>
 
     <!-- This is the Prefooter section-->
