--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>One Earth | Home</title>
+    <script src="https://kit.fontawesome.com/6d3c5bdc1a.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -28,7 +29,7 @@
                     <li><a href="#!"> STORIES</a></li>
                     <li><a href="#!"> ABOUT</a></li>
                     <li><a href="#!" class="button--orange"> Donate</a></li>
-                    <li><a href="#!"> Search</a></li>
+                    <li><a href="#!"><i class="fa-solid fa-magnifying-glass"></i></a></li>
                 </ul>
             </div>
         </div>
@@ -428,7 +429,7 @@
         <div class="footer__nav--2">
             <ul class="footer__nav-list">
                 <li><a href="https://www.oneearth.org/sitemap/"> Sitemap</a>|<a href="https://www.oneearth.org/contactus/"> Contact</a></li>
-                <li> One Earth | EIN: 85-2588841</li>
+                <li><i class="fa-regular fa-copyright"></i>One Earth | EIN: 85-2588841</li>
                 <li><a href="https://www.oneearth.org/terms/"> Terms</a>|<a href="https://www.oneearth.org/policies/"> Policies</a></li>
             </ul>
         </div>
